  - 'by' property with blocker's ID,
    use 'by' property with UserIdentity value instead.
* The following functions, hard deprecated since 1.37, have been removed:
  - Title::isWatchable()
  - WatchAction::doWatchOrUnwatch(), WatchAction::doWatch(),
    WatchAction::doUnwatch(), WatchAction::getWatchToken()
  - User::isWatched(), User::isTempWatched(), User::addWatch(),
    User::removeWatch()
* …

=== Deprecations in 1.38 ===
* The MWGrants class is deprecated in favor of the new GrantsInfo and
  GrantsLocalization services.
* PageArchive::undeleteAsUser(), ::getFileStatus() and ::getRevisionStatus()
  were deprecated. Use UndeletePage instead.
* The global functions wfReadOnly() and wfReadOnlyReason() have been
  deprecated in favor of the ReadOnlyMode service.
* PageProps::getInstance() has been deprecated. Use
  MediaWikiServices::getPageProps() instead.
* User::setOption(), deprecated since 1.35, now emits deprecation warnings.
* Linker::formatComment(), ::formatLinksInComment(), ::commentBlock() and
  revComment() were soft-deprecated. Use the new CommentFormatter service.
* Skin::getSkinStylePath has been hard deprecated. Direct string path
  should be used instead.
* DatabaseBlock::purgeExpired(), deprecated since 1.36, now emit
  deprecation warnings.
* SkinTemplate::getPersonalToolsList(), deprecated since 1.35, now emits
  deprecation warnings.
* The following methods from the User class were hard deprecated:
   - ::blockedBy
   - ::getBlockId
* Content::getParserOutput() was deprecated.
  Use ContentRenderer::getParserOutput and override
  ContentHandler::fillParserOutput instead.
* MessageContent class was hard-deprecated.
* Message::content() was hard-deprecated.
* The following methods from the ParserOutput class were hard deprecated:
   - ::hideNewSection() - use ::setHideNewSection()
   - ::preventClickjacking() - use ::{get,set}PreventClickjacking()
* The following methods were soft-deprecated; use ::setPreventClickjacking(..)
  instead: